<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/debunking_tools">
        <menu>
            <item
                android:id="@+id/nav_bufale_net"
                android:title="@string/bufale_net"
                />

            <item
                android:id="@+id/nav_butac_it"
                android:title="@string/butac_it"
                />
        </menu>
    </item>

    <item android:title="@string/image_tools">
        <menu>
            <item
                android:id="@+id/nav_tineye"
                android:title="@string/tineye"
                />

            <item
                android:id="@+id/nav_google"
                android:title="@string/google_reverse_image_tool"
                />
        </menu>
    </item>

    <item
        android:id="@+id/code"
        android:icon="@drawable/ic_info_24dp"
        android:title="@string/code" />
    <item
        android:id="@+id/licence"
        android:icon="@drawable/ic_licence_24dp"
        android:title="@string/licence" />

</menu>
